--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
   <div class="container">
     <p id="adding-element">
-      <label for="new-task label">Add Item</label>
+      <label for="new-task" class="label label-new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task"class="task input" type="text">
         <button class="btn">Add</button>
