refactor(extended-1.1): add semantic tags

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="header">
+  <header class="header">
     <img class="header-img" src="./eisenhower-matrix.jpg">
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="container">
-    <p id="adding-element">
-      <label for="new-task" class="label label-new-task">Add Item</label>
+  </header>
+  <main class="container">
+    <div id="adding-element">
+      <h1 for="new-task" class="label label-new-task">Add Item</h1>
       <div class="task-row-wrapper">
         <input id="new-task"class="task input" type="text">
         <button class="btn">Add</button>
       </div>
-    </p>
+    </div>
     <h3 class="title">Todo</h3>
     <ul class="list" id="incomplete-tasks">
       <li class="list-item">
@@ -51,7 +51,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
