--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="body">
   <header class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="container">
@@ -26,7 +26,7 @@
         <input type="text" class="task input">
         <button class="edit btn">Edit</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
       <li class="edit-mode list-item">
@@ -35,7 +35,7 @@
         <input type="text" value="Go Shopping" class="task input">
         <button class="edit btn">Save</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
@@ -47,7 +47,7 @@
         <input type="text" class="task input">
         <button class="edit btn">Edit</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
