--- a/index.html
+++ b/index.html
@@ -7,47 +7,47 @@
 </head>
 <body class="body">
   <header class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="container">
-    <div id="adding-element">
-      <h1 for="new-task" class="label label-new-task">Add Item</h1>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task input" type="text">
-        <button class="btn">Add</button>
+  <main class="main">
+    <div class="adding-element" id="adding-element">
+      <h1 class="adding-element__title">Add Item</h1>
+      <div class="adding-element__wrapper">
+        <input id="new-task"class="task input adding-element__new-task" type="text">
+        <button class="btn adding-element__btn">Add</button>
       </div>
     </div>
     <h3 class="title">Todo</h3>
     <ul class="list" id="incomplete-tasks">
-      <li class="list-item">
-        <input class="input input-checkbox" type="checkbox">
-        <label class="task label">Pay Bills</label>
-        <input type="text" class="task input">
+      <li class="list__item">
+        <input class="list__item-checkbox" type="checkbox">
+        <label class="task list__item-label">Pay Bills</label>
+        <input type="text" class="task incomplete-tasks__input list__item-input input">
         <button class="edit btn">Edit</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+          <img class="delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
-      <li class="edit-mode list-item">
-        <input class="input input-checkbox" type="checkbox">
-        <label class="task label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input">
+      <li class="edit-mode list__item">
+        <input class="list__item-checkbox" type="checkbox">
+        <label class="task list__item-label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task list__item-input input">
         <button class="edit btn">Save</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+          <img class="delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
     <h3 class="title">Completed</h3>
-    <ul class="list" id="completed-tasks">
-      <li class="list-item">
-        <input class="input input-checkbox" type="checkbox" checked>
-        <label class="task label">See the Doctor</label>
-        <input type="text" class="task input">
+    <ul class="list list-completed" id="completed-tasks">
+      <li class="list__item">
+        <input class="list__item-checkbox" type="checkbox" checked>
+        <label class="task list__item-label">See the Doctor</label>
+        <input type="text" class="task list__item-input input">
         <button class="edit btn">Edit</button>
         <button class="delete btn">
-          <img class="delete-img" src="./remove.svg" alt="delete button">
+          <img class="delete__img" src="./remove.svg" alt="delete button">
         </button>
       </li>
     </ul>
